--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "html-entities"      : "1.2.0",
     "querystring"        : "0.2.0",
     "dateformat"         : "1.0.11", 
-    "couchdbjs"          : "1.1.2" 
+    "couchdbjs"          : "1.1.2",
+    "request"            : "2.79.0",
+    "mailgun-js"         : "0.8.1" 
   }
 }
